--- a/index.html
+++ b/index.html
@@ -1,56 +1,153 @@
+根据您提供的图片，我可以帮您重新编写代码以更好地匹配这个布局和设计。以下是基于图片的新版代码：
+
+```html
 <!DOCTYPE html>
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>电脑使用时间记录</title>
+    <title>贡献图表</title>
     <style>
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 5px;
-            max-width: 800px;
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif;
+            max-width: 1000px;
             margin: 0 auto;
+            padding: 20px;
+        }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .year-selector {
+            background-color: #0969da;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 6px;
+        }
+        .container {
+            border: 1px solid #d0d7de;
+            border-radius: 6px;
+            padding: 20px;
+        }
+        .months {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+            color: #57606a;
+            font-size: 12px;
+        }
+        .graph {
+            display: grid;
+            grid-template-columns: repeat(53, 1fr);
+            gap: 3px;
+        }
+        .weekday {
+            font-size: 12px;
+            color: #57606a;
+            text-align: right;
+            padding-right: 5px;
         }
         .day {
-            width: 20px;
-            height: 20px;
+            width: 10px;
+            height: 10px;
             background-color: #ebedf0;
+            border-radius: 2px;
         }
         .usage-1 { background-color: #9be9a8; }
         .usage-2 { background-color: #40c463; }
         .usage-3 { background-color: #30a14e; }
         .usage-4 { background-color: #216e39; }
+        .footer {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+            font-size: 12px;
+            color: #57606a;
+        }
+        .legend {
+            display: flex;
+            align-items: center;
+        }
+        .legend-item {
+            width: 10px;
+            height: 10px;
+            margin: 0 2px;
+            border-radius: 2px;
+        }
     </style>
 </head>
 <body>
-    <h1>电脑使用时间记录</h1>
-    <div class="container" id="contributionGraph"></div>
+    <div class="header">
+        <h2>64 contributions in the last year</h2>
+        <button class="year-selector">2024 ▼</button>
+    </div>
+    <div class="container">
+        <div class="months">
+            <span>Jul</span><span>Aug</span><span>Sep</span><span>Oct</span><span>Nov</span><span>Dec</span>
+            <span>Jan</span><span>Feb</span><span>Mar</span><span>Apr</span><span>May</span><span>Jun</span><span>Jul</span>
+        </div>
+        <div class="graph" id="contributionGraph"></div>
+        <div class="footer">
+            <span>Learn how we count contributions</span>
+            <div class="legend">
+                <span>Less</span>
+                <div class="legend-item" style="background-color: #ebedf0;"></div>
+                <div class="legend-item usage-1"></div>
+                <div class="legend-item usage-2"></div>
+                <div class="legend-item usage-3"></div>
+                <div class="legend-item usage-4"></div>
+                <span>More</span>
+            </div>
+        </div>
+    </div>
 
     <script>
         const contributionGraph = document.getElementById('contributionGraph');
-        const daysInYear = 365;
+        const weekdays = ['Mon', 'Wed', 'Fri'];
+        const daysInWeek = 7;
+        const weeksInYear = 53;
 
         function getRandomUsage() {
-            return Math.floor(Math.random() * 12);
+            return Math.floor(Math.random() * 5);
         }
 
-        function getUsageClass(hours) {
-            if (hours === 0) return '';
-            if (hours < 4) return 'usage-1';
-            if (hours < 8) return 'usage-2';
-            if (hours < 10) return 'usage-3';
-            return 'usage-4';
+        function getUsageClass(level) {
+            if (level === 0) return '';
+            return `usage-${level}`;
         }
 
-        for (let i = 0; i < daysInYear; i++) {
-            const day = document.createElement('div');
-            day.className = 'day';
-            const usage = getRandomUsage();
-            day.classList.add(getUsageClass(usage));
-            day.title = `使用时间：${usage} 小时`;
-            contributionGraph.appendChild(day);
+        for (let i = 0; i < daysInWeek; i++) {
+            if (i % 2 === 0) {
+                const weekday = document.createElement('div');
+                weekday.className = 'weekday';
+                weekday.textContent = weekdays[i / 2];
+                contributionGraph.appendChild(weekday);
+            }
+            for (let j = 0; j < weeksInYear; j++) {
+                const day = document.createElement('div');
+                day.className = 'day';
+                const usage = getRandomUsage();
+                day.classList.add(getUsageClass(usage));
+                contributionGraph.appendChild(day);
+            }
         }
     </script>
 </body>
 </html>
+```
+
+这个新版本的代码包含了以下改进：
+
+1. 添加了月份标签。
+2. 实现了类似GitHub贡献图的网格布局。
+3. 添加了星期几的标签（周一、周三、周五）。
+4. 添加了顶部的标题和年份选择器。
+5. 添加了底部的图例说明。
+6. 改进了整体样式，使其更接近图片中的设计。
+
+请注意，这个版本仍然使用随机数据来填充图表。如果您需要显示实际的贡献数据，您需要修改`getRandomUsage()`函数来返回实际的数据值。
+
+您可以根据需要进一步调整样式和功能。如果您有任何其他具体要求或需要进一步的修改，请告诉我。
