--- a/index.html
+++ b/index.html
@@ -1,151 +1,154 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>贡献图表</title>
+    <title>Computer Usage Heatmap</title>
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
             max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
         }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .year-selector {
-            background-color: #0969da;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 6px;
-        }
         .container {
             border: 1px solid #d0d7de;
             border-radius: 6px;
-            padding: 20px;
+            padding: 16px;
         }
-        .months {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-            color: #57606a;
-            font-size: 12px;
-        }
-        .graph-container {
-            display: flex;
-        }
-        .weekdays {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding-right: 5px;
+        .graph {
+            display: grid;
+            grid-template-columns: auto repeat(53, 1fr);
+            gap: 3px;
         }
         .weekday {
             font-size: 12px;
             color: #57606a;
             text-align: right;
-            height: 15px;
-            line-height: 15px;
+            padding-right: 4px;
         }
-        .graph {
-            display: grid;
-            grid-template-columns: repeat(53, 1fr);
-            grid-template-rows: repeat(7, 1fr);
-            gap: 3px;
-        }
-        .day {
+        .cell {
             width: 10px;
             height: 10px;
-            background-color: #ebedf0;
             border-radius: 2px;
+            background-color: #ebedf0;
+            position: relative;
         }
         .usage-1 { background-color: #9be9a8; }
         .usage-2 { background-color: #40c463; }
-        .footer {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
+        .usage-3 { background-color: #30a14e; }
+        .usage-4 { background-color: #216e39; }
+        .months {
+            display: grid;
+            grid-template-columns: repeat(53, 1fr);
+            text-align: start;
             font-size: 12px;
             color: #57606a;
+            padding-left: 28px;
+            margin-bottom: 8px;
         }
-        .legend {
-            display: flex;
-            align-items: center;
+        .month-label {
+            position: relative;
         }
-        .legend-item {
-            width: 10px;
-            height: 10px;
-            margin: 0 2px;
-            border-radius: 2px;
+        .tooltip {
+            position: absolute;
+            background-color: #24292e;
+            color: #fff;
+            padding: 5px;
+            border-radius: 3px;
+            font-size: 12px;
+            z-index: 1;
+            display: none;
+            white-space: nowrap;
         }
     </style>
 </head>
 <body>
-    <div class="header">
-        <h2>64 contributions in the last year</h2>
-        <button class="year-selector">2024 ▼</button>
-    </div>
+    <h1>Computer Usage Heatmap</h1>
     <div class="container">
         <div class="months" id="months"></div>
-        <div class="graph-container">
-            <div class="weekdays">
-                <div class="weekday">Mon</div>
-                <div class="weekday"></div>
-                <div class="weekday">Wed</div>
-                <div class="weekday"></div>
-                <div class="weekday">Fri</div>
-                <div class="weekday"></div>
-                <div class="weekday"></div>
-            </div>
-            <div class="graph" id="contributionGraph"></div>
-        </div>
-        <div class="footer">
-            <span>Learn how we count contributions</span>
-            <div class="legend">
-                <span>Less</span>
-                <div class="legend-item" style="background-color: #ebedf0;"></div>
-                <div class="legend-item usage-1"></div>
-                <div class="legend-item usage-2"></div>
-                <div class="legend-item usage-2"></div>
-                <div class="legend-item usage-2"></div>
-                <span>More</span>
-            </div>
-        </div>
+        <div class="graph" id="graph"></div>
     </div>
 
     <script>
-        const contributionGraph = document.getElementById('contributionGraph');
+        const graph = document.getElementById('graph');
         const monthsContainer = document.getElementById('months');
-        const months = ['Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec', 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul'];
-        const weeksInYear = 53;
-        const daysInWeek = 7;
+        const weekdays = ['', 'Mon', '', 'Wed', '', 'Fri', ''];
+        const months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
 
-        // 添加月份
-        months.forEach(month => {
-            const monthElement = document.createElement('span');
-            monthElement.textContent = month;
-            monthsContainer.appendChild(monthElement);
-        });
+        // 获取当前日期
+        const today = new Date();
+        const oneYearAgo = new Date(today);
+        oneYearAgo.setFullYear(today.getFullYear() - 1);
+        oneYearAgo.setDate(oneYearAgo.getDate() - oneYearAgo.getDay());
 
-        // 添加所有天的贡献方块
-        for (let week = 0; week < weeksInYear; week++) {
-            for (let day = 0; day < daysInWeek; day++) {
-                const dayElement = document.createElement('div');
-                dayElement.className = 'day';
-                contributionGraph.appendChild(dayElement);
+        // 生成月份标签
+        let currentDate = new Date(oneYearAgo);
+        let lastMonth = -1;
+        for (let week = 0; week < 53; week++) {
+            if (currentDate.getMonth() !== lastMonth) {
+                const monthLabel = document.createElement('div');
+                monthLabel.textContent = months[currentDate.getMonth()];
+                monthLabel.className = 'month-label';
+                monthLabel.style.gridColumnStart = week + 1;
+                monthsContainer.appendChild(monthLabel);
+                lastMonth = currentDate.getMonth();
             }
+            currentDate.setDate(currentDate.getDate() + 7);
         }
 
-        // 添加7月份的两个特定贡献
-        const firstMonday = contributionGraph.children[0]; // 第一个星期一的方块
-        const nextMonday = contributionGraph.children[7]; // 下一个星期一的方块
-        firstMonday.className = 'day usage-2';
-        nextMonday.className = 'day usage-1';
+        // 生成星期标签和单元格
+        weekdays.forEach(day => {
+            const dayLabel = document.createElement('div');
+            dayLabel.textContent = day;
+            dayLabel.className = 'weekday';
+            graph.appendChild(dayLabel);
+
+            currentDate = new Date(oneYearAgo);
+            for (let i = 0; i < 53; i++) {
+                const cell = document.createElement('div');
+                cell.className = 'cell';
+                cell.dataset.date = currentDate.toISOString().split('T')[0];
+                graph.appendChild(cell);
+                currentDate.setDate(currentDate.getDate() + 7);
+            }
+        });
+
+        // 模拟使用时间数据（这里您需要替换为实际的数据收集逻辑）
+        function simulateUsage() {
+            const cells = document.querySelectorAll('.cell');
+            cells.forEach(cell => {
+                const usage = Math.floor(Math.random() * 5);
+                const hours = Math.floor(Math.random() * 24);
+                const minutes = Math.floor(Math.random() * 60);
+                cell.dataset.usage = `${hours}h ${minutes}m`;
+                if (usage > 0) {
+                    cell.className = `cell usage-${usage}`;
+                }
+            });
+        }
+
+        simulateUsage();
+
+        // 添加鼠标悬停效果
+        graph.addEventListener('mouseover', (event) => {
+            if (event.target.classList.contains('cell')) {
+                const tooltip = document.createElement('div');
+                tooltip.className = 'tooltip';
+                tooltip.textContent = `${event.target.dataset.date}: ${event.target.dataset.usage}`;
+                event.target.appendChild(tooltip);
+                tooltip.style.display = 'block';
+            }
+        });
+
+        graph.addEventListener('mouseout', (event) => {
+            if (event.target.classList.contains('cell')) {
+                const tooltip = event.target.querySelector('.tooltip');
+                if (tooltip) {
+                    tooltip.remove();
+                }
+            }
+        });
     </script>
 </body>
 </html>
