--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,9 +11,13 @@
         <div class="months"></div>
         <div class="content">
             <div class="weekdays">
+                <div></div>
                 <div>Mon</div>
+                <div></div>
                 <div>Wed</div>
+                <div></div>
                 <div>Fri</div>
+                <div></div>
             </div>
             <div class="weeks"></div>
         </div>
