--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             </div>
             <div class="weeks"></div>
         </div>
+        <div class="legend">
+            <span>Less</span>
+            <div class="legend-squares">
+                <div class="legend-square" data-level="0"></div>
+                <div class="legend-square" data-level="1"></div>
+                <div class="legend-square" data-level="2"></div>
+                <div class="legend-square" data-level="3"></div>
+                <div class="legend-square" data-level="4"></div>
+            </div>
+            <span>More</span>
+        </div>
     </div>
     <div class="tooltip" id="tooltip"></div>
     <script src="script.js"></script>
