--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,33 +7,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="calendar">
-        <div class="months"></div>
-        <div class="content">
-            <div class="weekdays">
-                <div></div>
-                <div>Mon</div>
-                <div></div>
-                <div>Wed</div>
-                <div></div>
-                <div>Fri</div>
-                <div></div>
+    <div class="container">
+        <div class="calendar">
+            <div class="months"></div>
+            <div class="content">
+                <div class="weekdays">
+                    <div></div>
+                    <div>Mon</div>
+                    <div></div>
+                    <div>Wed</div>
+                    <div></div>
+                    <div>Fri</div>
+                    <div></div>
+                </div>
+                <div class="weeks"></div>
             </div>
-            <div class="weeks"></div>
-        </div>
-        <div class="legend">
-            <span>Less</span>
-            <div class="legend-squares">
-                <div class="legend-square" data-level="0"></div>
-                <div class="legend-square" data-level="1"></div>
-                <div class="legend-square" data-level="2"></div>
-                <div class="legend-square" data-level="3"></div>
-                <div class="legend-square" data-level="4"></div>
+            <div class="legend">
+                <span>Less</span>
+                <div class="legend-squares">
+                    <div class="legend-square" data-level="0"></div>
+                    <div class="legend-square" data-level="1"></div>
+                    <div class="legend-square" data-level="2"></div>
+                    <div class="legend-square" data-level="3"></div>
+                    <div class="legend-square" data-level="4"></div>
+                </div>
+                <span>More</span>
             </div>
-            <span>More</span>
         </div>
+        <div class="tooltip" id="tooltip"></div>
     </div>
-    <div class="tooltip" id="tooltip"></div>
     <script src="script.js"></script>
 </body>
 </html>
