--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,9 +23,13 @@
                 <div class="weeks"></div>
             </div>
             <div class="legend">
+                <div class="legend-leave">
+                    <div class="legend-square" data-level="6"></div>
+                    <span>Days of leave <span class="days-over-17-text">(0 days)</span></span>
+                </div>
                 <div class="legend-business-trip">
                     <div class="legend-square" data-level="5"></div>
-                    <span>Business trip</span>
+                    <span class="business-trip-text">Business trip <span class="days-over-16-text">(0 days)</span></span>
                 </div>
                 <div class="legend-main">
                     <span>Less</span>
